intento de crear una web semantica

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Página de Pratt</title>
+  </head>
+  <body>
+    <nav>
+      <a
+        href="https://www.linkedin.com/in/pratt-thomas-paredes-casapia-ba04a4197/"
+        ><img
+          src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
+          width="18px"
+          height="18px"
+        ><span style="font-size: 12px">
+          <i>Pratt Paredes</i>
+        </span></a
+      >
+      <ul>
+        <li>Github</li>
+        <li>Facebook</li>
+        <li>Gmail</li>
+      </ul>
+    </nav>
+  </body>
 </html>
